--- a/locales/de.json
+++ b/locales/de.json
@@ -6,15 +6,15 @@
     "chat": "Chatte mit Benutzern und Entwicklern",
     "contact": "Kontakt:",
     "data": "Daten:",
-    "data-description": "Dies basiert auf <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Es wird normalerweise einmal pro Woche aktualisiert, wenn ein neues Planet-File verfügbar ist. Siehe Datum der <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">Datendateien</a>.",
-    "description": "Online-Service der BRouter Routing Engine. Für die Offline-Android-App und weitere Informationen siehe <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a>.",
-    "details": "<i><a href=\"http://brouter.de/privacypolicy.html\" target=\"_blank\">Datenschutz-Bestimmungen</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Änderungsprotokoll</a></i> und\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">weitere Infos</a></i> zum Client.",
+    "data-description": "Dies basiert auf <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Es wird normalerweise einmal pro Woche aktualisiert, wenn ein neues Planet-File verfügbar ist. Siehe Datum der <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">Datendateien</a>.",
+    "description": "Online-Service der BRouter Routing Engine. Für die Offline-Android-App und weitere Informationen siehe <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>.",
+    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Datenschutz-Bestimmungen</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Änderungsprotokoll</a></i> und\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">weitere Infos</a></i> zum Client.",
     "support": "Generelle Diskussionen/Fragen, Support",
     "title": "Über"
   },
   "credits": {
     "brouter": "BRouter",
-    "brouter-license": "<a target=\"_blank\" href=\"http://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
+    "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, Quellen: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP und die GIS Benutzergemeinschaft",
     "esri-tiles": "Esri World Imagery",
     "map-data": "Kartendaten",
@@ -76,12 +76,12 @@
   "map": {
     "attribution-osm-long": "OpenStreetMap-Mitwirkende",
     "attribution-osm-short": "OpenStreetMap",
-    "clear-route": "Route löschen",
     "copyright": "Copyright",
     "cycling": "Radfahren",
     "delete-last-point": "Letzten Punkt löschen",
-    "delete-nogo-areas": "&nbsp;&nbsp;auch alle no-go areas löschen",
-    "delete-route": "Route löschen?",
+    "delete-nogo-areas": "Delete all no-go areas",
+    "delete-route": "Delete route",
+    "delete-route-nogos": "Delete route and nogos",
     "draw-route-start": "Route anzeigen (D Taste)",
     "draw-route-stop": "Route entfernen (ESC Taste)",
     "hikebike-hillshading": "Höhenschummerung",
