--- a/locales/hu.json
+++ b/locales/hu.json
@@ -3,18 +3,18 @@
     "bug-reports": "Hibák és kérések bejelentése:",
     "bug-reports-back": "kiszolgálóoldal / back end, útvonaltervező motor, Android alkalmazás, profilok, brouter.de weboldal",
     "bug-reports-front": "weboldali kliens / frontend.",
-    "chat": "Chat with users and developers",
+    "chat": "Chat felhasználókkal és fejlesztőkkel",
     "contact": "Kapcsolat:",
     "data": "Adatok:",
-    "data-description": "Az adatok alapja az <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Az oldal általában hetente frissül, amikor az új bolygófájl (Planet fájl) elérhetővé válik. A dátumok megtalálhatók az <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">adatfájlokban</a>.",
-    "description": "Ez itt a BRouter útvonaltervező motor online szolgáltatása. Az Android alkalmazásról és a további információkról a <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a> oldalon olvashat.",
-    "details": "<i><a href=\"http://brouter.de/privacypolicy.html\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
+    "data-description": "Az adatok alapja az <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Az oldal általában hetente frissül, amikor az új bolygófájl (Planet fájl) elérhetővé válik. A dátumok megtalálhatók az <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">adatfájlokban</a>.",
+    "description": "Ez itt a BRouter útvonaltervező motor online szolgáltatása. Az Android alkalmazásról és a további információkról a <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a> oldalon olvashat.",
+    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
     "support": "Általános viták/kérdések, támogatás",
     "title": "Névjegy"
   },
   "credits": {
     "brouter": "BRouter",
-    "brouter-license": "<a target=\"_blank\" href=\"http://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
+    "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">Globális légi felvételek</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, források: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP valamint a GIS felhasználói közösség",
     "esri-tiles": "Esri World Imagery",
     "map-data": "Térképadatok",
@@ -28,8 +28,8 @@
     "format_geojson": "GeoJSON",
     "format_gpx": "GPX",
     "format_kml": "KML",
-    "include": "Include",
-    "include_waypoints": "Waypoints",
+    "include": "Belefoglalás",
+    "include_waypoints": "Útpontok",
     "route-from-to": "{{from}} -> {{to}} ({{distance}} km)",
     "route-loop": "{{from}} ({{distance}} km)",
     "title": "Útvonal exportálása",
@@ -57,18 +57,18 @@
     "add-base": "Alapréteg hozzáadása",
     "add-overlay": "Rátétréteg hozzáadása",
     "customize": "Rétegek személyre szabása",
-    "opacity-slider": "Opacity slider",
+    "opacity-slider": "Átlátszósági csúszka",
     "placeholder-layer-name": "Egyedi rétegnév (pl. OpenStreetMap)",
     "placeholder-layer-url": "Egyedi réteg URL-je (pl. https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png)",
     "remove-selection": "Kijelölés eltávolítása"
   },
   "loadNogos": {
     "defaultProperties": "Alapértelmezett tulajdonságok",
-    "file": "File (.geojson): ",
+    "file": "Fájl (.geojson):",
     "load": "Betöltés",
     "nogoBuffer": "Elkerülendő területek körüli távolság (méter)",
-    "nogoRadius": "No-go radius for points (in meters): ",
-    "nogoWeight": "No-go weight (-1 means impassable): ",
+    "nogoRadius": "Elkerülendő pontok körüli sugár (méter):",
+    "nogoWeight": "Elkerülendő területek súlyozása (-1 = áthatolhatatlan):",
     "source": "Forrás",
     "title": "Elkerülendő területek betöltése",
     "url": "URL:"
@@ -76,12 +76,12 @@
   "map": {
     "attribution-osm-long": "OpenStreetMap közreműködők",
     "attribution-osm-short": "OpenStreetMap",
-    "clear-route": "Útvonal törlése",
     "copyright": "Szerzői jogok",
     "cycling": "Kerékpározás",
     "delete-last-point": "Utolsó pont törlése",
-    "delete-nogo-areas": "&nbsp;&nbsp;törlődjenek az elkerülendő területek is",
-    "delete-route": "Útvonal törlése?",
+    "delete-nogo-areas": "Minden elkerülendő terület törlése",
+    "delete-route": "Útvonal törlése",
+    "delete-route-nogos": "Útvonal és elkerülendő területek törlése",
     "draw-route-start": "Útvonal rajzolása (D billentyű)",
     "draw-route-stop": "Útvonal rajzolásának megszakítása (ESC billentyű)",
     "hikebike-hillshading": "Domborzatárnyékolás",
@@ -184,7 +184,7 @@
       "expand": "Minden kibontása",
       "optional": "Rétegek hozzáadása vagy eltávolítása",
       "optional-layers": "Több",
-      "overlay-opacity": "Overlay transparency",
+      "overlay-opacity": "Rátétréteg átlászósága",
       "table": {
         "URL": "URL",
         "empty": "Még nincs beállítva egyedi réteg",
