--- a/locales/pl.json
+++ b/locales/pl.json
@@ -6,15 +6,15 @@
     "chat": "Czat z użytkownikami i twórcami",
     "contact": "Kontakt:",
     "data": "Dane:",
-    "data-description": "Bazujemy na <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Aktualizacje są zazwyczaj raz w tygodniu, kiedy są dostępne nowe pliki Planet, więc sprawdź daty <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">plików z danymi</a>.",
-    "description": "Dostęp online do silnika wyznaczania tras BRouter. Aplikację offline na Androida i więcej informacji znajdziesz na <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a>",
-    "details": "<i><a href=\"http://brouter.de/privacypolicy.html\" target=\"_blank\">Polityka prywatności</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Autorzy</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Histroia zmian</a></i> i\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">więcej informacji</a></i> na temat klienta.",
+    "data-description": "Bazujemy na <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Aktualizacje są zazwyczaj raz w tygodniu, kiedy są dostępne nowe pliki Planet, więc sprawdź daty <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">plików z danymi</a>.",
+    "description": "Dostęp online do silnika wyznaczania tras BRouter. Aplikację offline na Androida i więcej informacji znajdziesz na <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
+    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Polityka prywatności</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Autorzy</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Histroia zmian</a></i> i\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">więcej informacji</a></i> na temat klienta.",
     "support": "Ogólna dyskusja/pytania, wsparcie",
     "title": "Informacje"
   },
   "credits": {
     "brouter": "BRouter",
-    "brouter-license": "<a target=\"_blank\" href=\"http://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
+    "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, źródła: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP oraz Społeczność Użytkowników GIS",
     "esri-tiles": "Obrazowanie świata Esri",
     "map-data": "Dane mapy",
@@ -30,8 +30,8 @@
     "format_kml": "KML",
     "include": "Include",
     "include_waypoints": "Waypoints",
-    "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
-    "route-loop": "{{from}} ({{distance}}km)",
+    "route-from-to": "{{from}} -> {{to}} ({{distance}} km)",
+    "route-loop": "{{from}} ({{distance}} km)",
     "title": "Eksportuj trasę",
     "trackname": "Nazwa"
   },
@@ -64,11 +64,11 @@
   },
   "loadNogos": {
     "defaultProperties": "Domyślne właściwości",
-    "file": "File (.geojson): ",
+    "file": "Plik (.geojson): ",
     "load": "Wczytaj",
     "nogoBuffer": "Bufor stref no-go (w metrach):",
-    "nogoRadius": "No-go radius for points (in meters): ",
-    "nogoWeight": "No-go weight (-1 means impassable): ",
+    "nogoRadius": "Promień dla punktów (w metrach):",
+    "nogoWeight": "Waga no-go (-1 dla nieprzejezdnych):",
     "source": "Źródło",
     "title": "Wczytaj strefy no-go",
     "url": "URL: "
@@ -76,12 +76,12 @@
   "map": {
     "attribution-osm-long": "Współtwórcy OpenStreetMap",
     "attribution-osm-short": "OpenStreetMap",
-    "clear-route": "Wyczyść trasę",
     "copyright": "Prawa autorskie",
     "cycling": "Kolarstwo",
     "delete-last-point": "Usuń ostatni punkt",
-    "delete-nogo-areas": "&nbsp;&nbsp;usunie również wszystkie strefy no-go",
+    "delete-nogo-areas": "Usuń wszystkie strefy no-go",
     "delete-route": "Usunąć trasę?",
+    "delete-route-nogos": "Usuń trasę i strefy no-go",
     "draw-route-start": "Rysuj trasę (klawisz D)",
     "draw-route-stop": "Przestań rysować trasę (klawisz Esc)",
     "hikebike-hillshading": "Cieniowanie",
@@ -102,7 +102,7 @@
       "topo": "OpenTopoMap"
     },
     "loading": "Wczytywanie…",
-    "locate-me": "Pokaż mi gdzie jestem",
+    "locate-me": "Pokaż mi, gdzie jestem",
     "nogo": {
       "cancel": "Anuluj rysowanie strefy no-go",
       "click-drag": "Kliknij i przeciągnij, aby narysować okrąg",
