--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -6,15 +6,15 @@
     "chat": "Chat with users and developers",
     "contact": "聯絡：",
     "data": "資料:",
-    "data-description": "這是一項基於 <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a> 提供的服務。它通常會在每週新的 Planet 檔案發布後更新，詳見 <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">資料檔案</a>。",
-    "description": "BRouter 導航引擎線上版。有關離線版 Android 應用程式及更多資訊，請見 <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a>。",
-    "details": "用戸端上的<i><a href=\"http://brouter.de/privacypolicy.html\" target=\"_blank\">隱私政策</a></i>、\n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">開發人員名單</a></i>、\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">更新日誌</a></i> 及\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">更多資訊</a></i> ",
+    "data-description": "這是一項基於 <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a> 提供的服務。它通常會在每週新的 Planet 檔案發布後更新，詳見 <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">資料檔案</a>。",
+    "description": "BRouter 導航引擎線上版。有關離線版 Android 應用程式及更多資訊，請見 <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>。",
+    "details": "用戸端上的<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">隱私政策</a></i>、\n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">開發人員名單</a></i>、\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">更新日誌</a></i> 及\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">更多資訊</a></i> ",
     "support": "一般討論/提問及技術支援",
     "title": "關於"
   },
   "credits": {
     "brouter": "BRouter",
-    "brouter-license": "<a target=\"_blank\" href=\"http://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
+    "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, 來源: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, 以及 GIS 使用者社群",
     "esri-tiles": "Esri World Imagery",
     "map-data": "地圖資料",
@@ -76,12 +76,12 @@
   "map": {
     "attribution-osm-long": "OpenStreetMap 貢獻者",
     "attribution-osm-short": "OpenStreetMap 開放街圖",
-    "clear-route": "清除路線",
     "copyright": "著作權",
     "cycling": "自行車",
     "delete-last-point": "Delete last point",
-    "delete-nogo-areas": "&nbsp;&nbsp;同時刪除所有禁區",
-    "delete-route": "刪除路線？",
+    "delete-nogo-areas": "Delete all no-go areas",
+    "delete-route": "Delete route",
+    "delete-route-nogos": "Delete route and nogos",
     "draw-route-start": "繪畫路線 (按鍵D)",
     "draw-route-stop": "停止繪畫路線 (按鍵ESC)",
     "hikebike-hillshading": "Hillshading",
