--- a/locales/en.json
+++ b/locales/en.json
@@ -132,7 +132,8 @@
     "export": "Export",
     "load": {
       "nogos": "No-go areas",
-      "title": "Load"
+      "title": "Load",
+      "tracks": "Tracks"
     },
     "profile": {
       "car-eco": "Car (economic)",
@@ -208,6 +209,7 @@
     "profile-error": "Profile error: no or empty response from server",
     "strava-error": "Error getting Strava segments: {{error}}",
     "temporary-profile": "<strong>Note:</strong> Uploaded custom profiles are only cached temporarily on the server.<br/>Please save your edits to your local PC.",
+    "tracks-load-error'": "Error loading tracks: {{error}}",
     "upload-error": "Upload error: {{error}}"
   }
 }
